--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "lms-rls-1a",
-  "homepage": "https://abhi0842,github.io/ADP_1/",
-  "private": true,
+  "homepage": "https://abhi0842.github.io/ADP_1/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
